--- a/Advanced-Dom-Events/style.css
+++ b/Advanced-Dom-Events/style.css
@@ -665,8 +665,8 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    background-color: white;
-    color: #bbb;
+    background-color: black;
+    color: greenyellow;
     font-size: 1.5rem;
     font-weight: 400;
   }
